<resources>
    <string name="app_name">Sync Rename</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--ITEM MENU-->
    <string name="menu_dados">Dados</string>
    <string name="menu_timestamp">Mostrar Timestamp</string>
    <string name="menu_acessar">Acessar TXT</string>
    <string name="menu_novo">Novo TXT</string>
    <string name="menu_personalizar">Personalizar</string>
    <string name="menu_background">Mudar Background</string>
    <string name="menu_botao">Cor Botões</string>
    <string name="menu_read">Leitura</string>
    <string name="menu_qrcode">QR Code</string>
    <string name="menu_nfc">NFC</string>
    <!--ITEM MENU-->

    <string name="pass_pulseira">Passe a pulseira</string>
    <string name="pass_qrc">Leia o QR Code</string>
    <string name="confirmation_for">Para</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="back_button">Voltar</string>
    <string name="text_arquivo">Procurar arquivo</string>
    <string name="color_hexadecimal">Digite a cor Hexadecimal</string>
    <string name="ok">ok</string>
    <string name="cor_erro">Essa cor não existe</string>
    <string name="cor_sucesso">Cor alterada!</string>
    <string name="file_saved">Cadastrado realizado</string>
    <string name="file_name">files_sync_create</string>
    <string name="file_create">Criar</string>
    <string name="file_cancel">Cancelar</string>
    <string name="file_modal_text">Digite o nome do novo arquivo TXT:</string>
    <string name="file">arquivo</string>
    <string name="qrc_erro">Erro Qr Code</string>
    <string name="qrc_erro_msg">Não foi possível ler o Qr code</string>
    <string name="not_file">Crie um arquivo primeiro</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
