<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">


        <TextView
            android:layout_marginTop="21dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="0dp"
            android:text="@string/menu_novo"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/file_modal_text"
            android:textColor="@color/gray_1"
            android:textSize="14sp"
            />

        <EditText
            android:id="@+id/code_delivered"
            android:layout_marginTop="17dp"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="Roboto-Regular"
            android:hint="@string/file"
            android:inputType="textCapCharacters"
            />



    </LinearLayout>
</ScrollView>