<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical"
        android:paddingTop="100dp">

        <TextView
            android:id="@+id/text_hexadecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/color_hexadecimal"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_hexadecimal"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="8"
                android:background="@drawable/custom_edittext"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textSize="@dimen/text_2" />

            <Button
                android:id="@+id/button_hexadecimal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/text_2" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/view_color"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:cardCornerRadius="40dp"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/button_back"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_2"
            android:text="@string/back_button"
            android:layout_gravity="center"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>

</RelativeLayout>
