<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/father_relative"
    android:layout_height="match_parent"
    tools:context=".Activities.ConfirmacaoActivity">

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/text_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_2"
            android:text="Wed sep 19 15:56:37 GMT-0300 2018"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text_timestamp"
            android:layout_below="@+id/text_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_2"
            android:text="1537383397"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/para"
            android:layout_below="@+id/text_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_2"
            android:text="@string/confirmation_for"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text_tag"
            android:layout_below="@+id/para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_2"
            android:text="04FE5AAA624E80"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/button_nao"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:textColor="@color/white"
                    android:text="@string/no"
                    android:textSize="@dimen/text_2"
                    android:background="@drawable/button_red"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/button_sim"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:textColor="@color/white"
                    android:text="@string/yes"
                    android:textSize="@dimen/text_2"
                    android:background="@drawable/button_green"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    

</RelativeLayout>
