<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">


            <TextView
                android:id="@+id/text_arquivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_arquivo"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_2"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <LinearLayout
                android:id="@+id/linear_arquivo"
                android:layout_below="@+id/text_arquivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <LinearLayout
                    android:id="@+id/edit_arquivo"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="8"
                    android:background="@drawable/custom_edittext"
                    tools:ignore="Orientation" />


                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_gray"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/button_arquivo"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/search"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"/>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/text_hexadecimal"
                android:layout_below="@+id/linear_arquivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_2"
                android:textColor="@color/white"
                android:text="@string/color_hexadecimal"
                android:textAllCaps="false"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <LinearLayout
                android:id="@+id/linear_hexadecimal"
                android:layout_below="@+id/text_hexadecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <EditText
                    android:id="@+id/edit_hexadecimal"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="8"
                    android:textSize="@dimen/text_2"
                    android:textColor="@color/black"
                    android:background="@drawable/custom_edittext"
                    android:maxLength="6"/>

                <Button
                    android:id="@+id/button_hexadecimal"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_gray"
                    android:textSize="@dimen/text_2"
                    android:text="@string/ok"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_color"
                android:layout_below="@+id/linear_hexadecimal"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="45dp"
                android:background="@color/gray_1"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true">

                <android.support.v7.widget.CardView
                    android:id="@+id/view_color"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    app:cardCornerRadius="40dp" />

            </android.support.v7.widget.CardView>

            <!--<EditText-->
                <!--android:layout_below="@+id/card_view_color"-->
                <!--android:id="@+id/edit_hexadecimal1"-->
                <!--android:layout_width="90dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:textSize="@dimen/text_2"-->
                <!--android:textColor="@color/black"-->
                <!--android:background="@drawable/custom_edittext"-->
                <!--android:maxLength="6"/>-->



    <android.support.v7.widget.CardView
        android:id="@+id/button_back"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_2"
            android:text="@string/back_button"
            android:layout_gravity="center"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>

</RelativeLayout>
